--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,12 @@ jobs:
     runs-on: ubuntu-latest
     environment: 
       name: Development
-      url: 'http://dev.myapp.com'
+      APP_NAME: bb2app
+      AZURE_CONTAINER_REGISTRY: seagwamaksdevacr
+      RESOURCE_GROUP: seagwam-aks-dev-rg
+      CLUSTER_NAME: asia-dev-sea-aks
+      NAMESPACE: ns-gwam-aw-ifunds-dev
+      SECRET: acr-secret
     steps:
       - name: Deploy
         run: echo I am deploying!
